@@ -398,6 +398,9 @@ C-API
 Library
 -------
 
+- Issue #8833: tarfile created hard link entries with a size field != 0 by
+  mistake.
+
 - Charset.body_encode now correctly handles base64 encoding by encoding
   with the output_charset before calling base64mime.encode.  Passes the
   tests from 2.x issue 1368247.
